--- a/src/app/components/Navbar/Navbar.module.css
+++ b/src/app/components/Navbar/Navbar.module.css
@@ -4,6 +4,7 @@
     top:0;
     width: 100%;
     color:white;
+    
     font-size:20px;
     line-height: 24px;
     box-shadow:  0px 2px 4px rgba(0, 0, 0, 0.1);
@@ -49,7 +50,7 @@
     display: none;
     cursor: pointer;
     font-size:16px;
-    border: 1px solid black;
+    border: 1px solid white;
     
     padding: .5rem 1rem;
     transition: all 100ms ease-in-out;
@@ -60,7 +61,7 @@
 
 
 
-@media (max-width:600px){
+@media (max-width:700px){
     .menuButton{
         display: block;
     }
