--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,7 @@
   margin: 0;
 }
 :root{
-  --swiper-pagination-color: #fff;
+  --swiper-pagination-color: #ffffff5d;
 }
 /*
   Typographic tweaks!
